<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="oMnie">O mnie</string>
    <string name="cennik">Cennik</string>
    <string name="kontakt">Kontatkt</string>
    <string name="umowWizyte">Umów wizytę</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="login">Logowanie</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="title_activity_cennik">Cennik</string>
    <string name="title_activity_kontakt">Kontakt</string>
    <string name="title_activity_umow_wizyte">Umów Wizytę</string>
    <string name="title_activity_logowanie">Logowanie</string>
    <string name="title_activity_rejestracja">Rejestracja</string>
    <string name="btnzaloguj">btnzaloguj</string>
    <string name="haslo">Hasło</string>
    <string name="Login">Login</string>
    <string name="title_activity_uzytkownk">Uzytkownk</string>
</resources>
