<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lenovo.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <!--android:background="@drawable/hero"-->

    <Button
        android:id="@+id/oMnie"
        android:layout_width="169dp"
        android:layout_height="53dp"
        android:text="@string/oMnie"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/cennik"
        android:layout_width="169dp"
        android:layout_height="53dp"
        android:text="@string/cennik"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/kontakt"
        android:layout_width="169dp"
        android:layout_height="53dp"
        android:text="@string/kontakt"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/umowWizyte"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/umowWizyte"
        android:layout_width="169dp"
        android:layout_height="53dp"
        android:text="@string/umowWizyte"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />

</android.support.constraint.ConstraintLayout>
